# wg_forge_hw

./: Dockerfile  checker.sh  consumer.py  entrypoint.sh  publisher.py  pyproject.toml  server.py  tests.py
